# task_flow

./: .dockerignore  README.md  compose.yaml
backend/: Dockerfile  README.md  pyproject.toml  setup.cfg
backend/task_flow_api/: settings.py  urls.py
backend/tasks/: models.py  serializers.py  urls.py
nginx/: default.conf
task_flow_api/: pyproject.toml
task_flow_api/task_flow_api/: asgi.py  settings.py  urls.py  wsgi.py
task_flow_api/tasks/: permissions.py  serializers.py  urls.py  views.py
task_flow_api/tasks/migrations/: 0001_initial.py
task_flow_api/tasks/tests/: tests.py
